fix contact table not centered on small screens

--- a/style.css
+++ b/style.css
@@ -468,9 +468,9 @@ td {
 }
 
 @media only screen and (max-width: 1000px) {
-    table {
-        width: 100%;
+    .table-cv, .table-teaching {
         margin-right: 20px;
+        width: 100%;
     }
 
     tr {
